welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:15: error: value += is not a member of Int
      compt += 1
            ^ZigZag:23: error: value += is not a member of Int
      compt += 1
            ^